--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-  
+    <h1 class="header-one">✨Stop Hating Yourself✨</h1>
+      <h2 class="header-two">Which type of message?</h2>
+
+        <div>
+          <input type="radio" id="affirmation" name="quote-kind" value="affirmation"
+            <label>Affirmation</label>
+        </div>
+        <div>
+          <input type="radio" id="mantra" name="quote-kind" value="mantra"
+            <label>Mantra</label>
+        </div>
+
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
