Add HTML and CSS related to rounded boxes; add bell image

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   <body>
     <h1 class="header-one">✨Stop Hating Yourself✨</h1>
       <h2 class="header-two">Which type of message?</h2>
-
-        <div>
-          <input type="radio" id="affirmation" name="quote-kind" value="affirmation"
-            <label>Affirmation</label>
+        <div class="button-rectangle">
+          <nav>
+            <input type="radio" id="affirmation" name="quote-kind" value="affirmation"
+              <label>Affirmation</label>
+            <input type="radio" id="mantra" name="quote-kind" value="mantra"
+              <label>Mantra</label>
+          </nav>
         </div>
-        <div>
-          <input type="radio" id="mantra" name="quote-kind" value="mantra"
-            <label>Mantra</label>
+        <div class="quote-rectangle">
+            <img src="assets/meditate.svg" alt="A bell of some sort." height="100px" width="100px">
         </div>
-
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
