--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1 class="header-one">✨Stop Hating Yourself✨</h1>
-      <h2 class="header-two">Which type of message?</h2>
-        <div class="button-rectangle">
-          <nav>
+    <h1 class="header-one">✨ Stop Hating Yourself ✨</h1>
+    <h2 class="header-two">Which type of message?</h2>
+    <div class="button-rectangle">
+          <button class="button">Receive Message</button>
+          <form class="radio-buttons">
             <input type="radio" id="affirmation" name="quote-kind" value="affirmation"
-              <label>Affirmation</label>
+              <label><em>affirmation</em></label>
             <input type="radio" id="mantra" name="quote-kind" value="mantra"
-              <label>Mantra</label>
-          </nav>
-        </div>
-        <div class="quote-rectangle">
-            <img src="assets/meditate.svg" alt="A bell of some sort." height="100px" width="100px">
-        </div>
+              <label><em>mantra</em></label>
+          </form>
+    </div>
+    <div class="quote-rectangle">
+      <img src="assets/meditate.svg" alt="A bell of some sort.">
+    </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
