Add an h3 for quotes to populate, add hidden property to h3, add delete button

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
           </form>
     </div>
     <div class="quote-rectangle">
-      <img src="assets/meditate.svg" alt="A bell of some sort.">
+      <img class="heal-bell" src="assets/meditate.svg" alt="A bell of some sort.">
+      <h3 class="quote-output hidden"></h3>
+      <button class="delete-button hidden">THIS QUOTE SUCKS</button>
     </div>
     <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="arrays.js"></script>
   </body>
 </html>
