add some cute formatting but git stash destroyed it somehow, don't want to do it all again

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
           </form>
     </div>
     <div class="quote-rectangle">
-      <img src="assets/meditate.svg" alt="A bell of some sort.">
+      <img class="heal-bell" src="assets/meditate.svg" alt="A bell of some sort.">
+      <h3 class="quote-output hidden"></h3>
+      <button class="delete-button hidden">mids quote tbh try again</button>
     </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
