so cool how the command called git restore completely obliterates everything, never using stash again i will manually back everything up from now on

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="quote-rectangle">
       <img class="heal-bell" src="assets/meditate.svg" alt="A bell of some sort.">
       <h3 class="quote-output hidden"></h3>
-      <button class="delete-button hidden">THIS QUOTE SUCKS</button>
+      <button class="delete-button hidden">mids quote tbh try again</button>
     </div>
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="arrays.js"></script>
